--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 gigs:
-  - title: Ziggo Dome
+  - title: Del Ferro Trio
     date: 2015-11-04T00:00:00.000Z
     location: Utrecht
     url: 'http://www.ziggo.com'
-  - title: Ziggo Dome
+  - title: Del Ferro Trio
     date: 2015-11-05T00:00:00.000Z
     location: Amsterdam
     url: 'http://www.ziggo.com'
-  - title: Ziggo Dome in de grote hal
+  - title: Del Ferro Trio
     date: 2015-12-06T00:00:00.000Z
     location: Benidorm
     url: 'http://www.ziggo.com'
