Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,15 @@ gigs:
   - title: Del Ferro Trio
     date: 2015-11-04T00:00:00.000Z
     location: Utrecht
+    venue: Muziektheater
     url: 'http://www.ziggo.com'
   - title: Del Ferro Trio
     date: 2015-11-05T00:00:00.000Z
     location: Amsterdam
+    venue: Concertgebouw
     url: 'http://www.ziggo.com'
   - title: Del Ferro Trio
     date: 2015-12-06T00:00:00.000Z
     location: Benidorm
+    venue: Big concert hall
     url: 'http://www.ziggo.com'
