--- a/_config.yml
+++ b/_config.yml
@@ -12,5 +12,5 @@ gigs:
   - title: with Metropole Orkest
     date: 2015-12-06T00:00:00.000Z
     location: 'Hilversum, NL'
-    venue: MCO
+    venue: Muziekcentrum Omroep
     url: ''
