Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 gigs:
-  - title: Del Ferro Trio
-    date: 2015-11-04T00:00:00.000Z
-    location: Utrecht
-    venue: Muziektheater
-    url: 'http://www.ziggo.com'
-  - title: Del Ferro Trio
+  - title: with Jeroen Van Veen
+    date: 2015-11-22T00:00:00.000Z
+    location: 'Belgrade, Rs'
+    venue: Pianofestival
+    url: ''
+  - title: Trio del Ferro / Kjellberg / Mori
     date: 2015-11-05T00:00:00.000Z
-    location: Amsterdam
-    venue: Concertgebouw
-    url: 'http://www.ziggo.com'
-  - title: Del Ferro Trio
+    location: 'Inom Vallgraven, Sweden'
+    venue: Jazzklubben Nefertiti
+    url: ''
+  - title: with Metropole Orkest
     date: 2015-12-06T00:00:00.000Z
-    location: Benidorm
-    venue: Big concert hall
-    url: 'http://www.ziggo.com'
+    location: 'Hilversum, NL'
+    venue: MCO
+    url: ''
