Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ gigs:
     location: 'Belgrade, Rs'
     venue: Pianofestival
     url: ''
-  - title: Trio del Ferro / Kjellberg / Mori
+  - title: Trio del Ferro
     date: 2015-11-05T00:00:00.000Z
     location: 'Gothenburg, SE'
-    venue: Jazzklubben Nefertiti
+    venue: Nefertiti
     url: ''
   - title: with Metropole Orkest
     date: 2015-12-06T00:00:00.000Z
