Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ gigs:
     url: ''
   - title: Trio del Ferro / Kjellberg / Mori
     date: 2015-11-05T00:00:00.000Z
-    location: 'Inom Vallgraven, Sweden'
+    location: 'Gothenburg, SE'
     venue: Jazzklubben Nefertiti
     url: ''
   - title: with Metropole Orkest
