Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 gigs:
-  - title: with Jeroen Van Veen
+  - title: Mike del Ferro with Jeroen Van Veen
     date: 2015-11-22T00:00:00.000Z
     location: 'Belgrade, Rs'
     venue: Pianofestival
     url: ''
-  - title: Trio del Ferro
+  - title: Mike del Ferro with Trio del Ferro
     date: 2015-11-05T00:00:00.000Z
     location: 'Gothenburg, SE'
     venue: Nefertiti
     url: ''
-  - title: with Metropole Orkest
+  - title: Mike del Ferro with Metropole Orkest
     date: 2015-12-06T00:00:00.000Z
     location: 'Hilversum, NL'
     venue: MCO
