Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,15 @@
 gigs:
   - title: with Jeroen Van Veen
+    date: 2015-11-20T00:00:00.000Z
+    location: 'Belgrade, Rs'
+    venue: Keyboard days festival
+    url: ''
+  - title: with Jeroen Van Veen
+    date: 2015-11-21T00:00:00.000Z
+    location: 'Belgrade, Rs'
+    venue: Keyboard days festival
+    url: ''
+  - title: with Jeroen Van Veen
     date: 2015-11-22T00:00:00.000Z
     location: 'Belgrade, Rs'
     venue: Pianofestival
