Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ gigs:
     location: 'Hilversum, NL'
     venue: MCO
     url: ''
-  - title: with Metropole Orkest
+  - title: Mike del Ferro
     date: 2016-02-06T00:00:00.000Z
     location: 'Zeist, NL'
     venue: De Bovenkamer
