Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ gigs:
   - title: with Trio del Ferro
     date: 2016-01-22T00:00:00.000Z
     location: 'Gothenburg, SE'
-    venue: Nefertiti
+    venue: Jazz Club Nefertiti
     url: ''
   - title: with Metropole Orkest
     date: 2016-02-03T00:00:00.000Z
