--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ gigs:
   - title: with Metropole Orkest
     date: 2016-02-03T00:00:00.000Z
     location: 'Hilversum, NL'
-    venue: MCO
+    venue: Muziekcentrum Omroep
     url: ''
   - title: Mike del Ferro
     date: 2016-02-06T00:00:00.000Z
