Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ gigs:
   - title: Solo recital and piano duo with Jeroen Van Veen
     date: 2015-11-22T07:00:00.000Z
     location: 'Belgrade, Rs'
-    venue: Pianofestival
+    venue: Keyboarddays
     url: www.keyboarddays.com
   - title: Mike del Ferro trio
     date: 2016-01-22T08:00:00.000Z
