Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ gigs:
     location: 'Gothenburg, SE'
     venue: Jazz Club Nefertiti
     url: ''
-  - title: CD recrodings with Metropole Orchestra
+  - title: CD recordings with Metropole Orchestra
     date: 2016-02-03T10:00:00.000Z
     location: 'Hilversum, NL'
     venue: Muziekcentrum Omroep
     url: ''
-  - title: Mike del Ferro
+  - title: Mike del Ferro trio
     date: 2016-02-06T08:00:00.000Z
     location: 'Zeist, NL'
     venue: De Bovenkamer
