Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ gigs:
   - title: Mike del Ferro with the Metropole orchestra
     date: 2016-05-07T15:00:00.000Z
     location: Hilversum
-    venue: 'MCO gebouw (after concert!)'
+    venue: 'MCO gebouw (afternoon concert!)'
     url: www.mcogebouw.nl
   - title: Mike del Ferro with the Metropole orchestra
     date: 2016-05-08T11:00:00.000Z
