Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,6 @@ gigs:
     url: www.mcogebouw.nl
   - title: Mike del Ferro with the Metropole orchestra
     date: 2016-05-08T11:00:00.000Z
-    location: Amsterdam
+    location: Amsterdam (NL)
     venue: 'Concertgebouw, main hall ( 11am! )'
     url: www.concertgebouw.nl
