--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ gigs:
     location: 'Zeist, NL'
     venue: De Bovenkamer
     url: ''
-  - title: Mike del Ferro with the Metropole orchestra
+  - title: Mike del Ferro with the Metropole Orchestra
     date: 2016-05-07T15:00:00.000Z
     location: Hilversum
     venue: 'MCO gebouw (afternoon concert!)'
