Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,9 @@
 gigs:
+  - title: Mike del Ferro and Oene van Geel
+    date: 2016-01-03T14:00:00.000Z
+    location: Amsterdam (NL)
+    venue: Muziekgebouw
+    url: www.muziekgebouw.nl
   - title: Solo recital and piano duo with Jeroen Van Veen
     date: 2015-11-22T07:00:00.000Z
     location: 'Belgrade, Rs'
