--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 gigs:
-  - title: Solo recital and piano duo with Jeroen Van Veen
-    date: 2015-11-22T19:00:00.000Z
-    location: 'Belgrade, Rs'
-    venue: Keyboarddays
-    url: www.keyboarddays.com
   - title: Mike del Ferro and Oene van Geel
     date: 2016-01-03T14:00:00.000Z
     location: Amsterdam (NL)
     venue: Muziekgebouw
     url: www.muziekgebouw.nl
+  - title: 'Clinic "selfmanagement and networking for musicians"'
+    date: 2016-01-13T14:00:00.000Z
+    location: Amsterdam (NL)
+    venue: Lloyd Hotel
+    url: 'http://www.musicmotion.nl'
   - title: Mike del Ferro trio
     date: 2016-01-22T08:00:00.000Z
     location: 'Gothenburg, SE'
