Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,11 @@ gigs:
     location: 'Zeist, NL'
     venue: De Bovenkamer
     url: ''
+  - title: 'Mike del Ferro and the Brasilia Symphonic orchestra, opera meets Jazz'
+    date: 2016-03-08T20:00:00.000Z
+    location: Brasilia (B)
+    venue: TBA
+    url: ''
   - title: Mike del Ferro with the Metropole Orchestra
     date: 2016-05-07T15:00:00.000Z
     location: Hilversum
