Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 gigs:
-  - title: 'December 2015: only private concerts'
+  - title: ''
     date: ''
-    location: ''
+    location: 'December 2015: only private concerts'
     venue: ''
     url: ''
   - title: Mike del Ferro and Oene van Geel
