Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ gigs:
   - title: ''
     date: ''
     location: ''
-    venue: 'December: only private concerts'
+    venue: 'December 2015 : only private concerts'
     url: ''
   - title: Mike del Ferro and Oene van Geel
     date: 2016-01-03T14:00:00.000Z
