Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,10 @@ gigs:
     location: 'Hilversum, NL'
     venue: Muziekcentrum Omroep
     url: ''
-  - title: Mike del Ferro trio
+  - title: 'Mike del Ferro "opera meets jazz"'
     date: 2016-02-06T20:00:00.000Z
-    location: 'Zeist, NL'
-    venue: De Bovenkamer
+    location: De Rode Hoed
+    venue: Amsterdam
     url: ''
   - title: 'Mike del Ferro and the Brasilia Symphonic orchestra, Opera meets Jazz'
     date: 2016-03-08T20:00:00.000Z
