Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 gigs:
-  - title: ''
-    date: ''
-    location: ''
-    venue: 'December 2015 : only private concerts'
-    url: ''
+  - title: Jazz Plaza Festival
+    date: 2015-12-18T20:00:00.000Z
+    location: Havana
+    venue: Cuba
+    url: Mike del Ferro trio
   - title: Mike del Ferro and Oene van Geel
     date: 2016-01-03T14:00:00.000Z
     location: Amsterdam (NL)
