--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,4 @@
 gigs:
-  - title: Jazz Plaza Festival
-    date: 2015-12-18T20:00:00.000Z
-    location: Havana
-    venue: Cuba
-    url: Mike del Ferro trio
   - title: Mike del Ferro and Oene van Geel
     date: 2016-01-03T14:00:00.000Z
     location: Amsterdam (NL)
@@ -14,11 +9,6 @@ gigs:
     location: Amsterdam (NL)
     venue: Lloyd Hotel
     url: 'http://www.musicmotion.nl'
-  - title: Mike del Ferro trio
-    date: 2016-01-22T08:00:00.000Z
-    location: 'Gothenburg, SE'
-    venue: Jazz Club Nefertiti
-    url: ''
   - title: 'Piano duo Mike del Ferro & Jeroen van Veen'
     date: 2016-01-27T20:00:00.000Z
     location: Amsterdam (NL)
@@ -29,10 +19,25 @@ gigs:
     location: 'Hilversum, NL'
     venue: Muziekcentrum Omroep
     url: ''
+  - title: Mike del Ferro / Palle Danielson / Anders Kjellberg
+    date: 2016-02-12T08:00:00.000Z
+    location: 'Gothenburg, SE'
+    venue: Jazz Club Nefertiti
+    url: ''
   - title: 'Mike del Ferro "opera meets jazz"'
     date: 2016-02-06T20:00:00.000Z
     location: De Rode Hoed
     venue: Amsterdam
+    url: ''
+  - title: Mike del Ferro trio
+    date: 2016-02-16T20:00:00.000Z
+    location: Amsterdam (NL)
+    venue: Estrada theatre
+    url: ''
+  - title: Lecture
+    date: 2016-02-18T17:00:00.000Z
+    location: Tilburg (NL)
+    venue: Fontys Hogeschool
     url: ''
   - title: 'Mike del Ferro and the Brasilia Symphonic orchestra, Opera meets Jazz'
     date: 2016-03-08T20:00:00.000Z
