Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -64,3 +64,8 @@ gigs:
     location: Amsterdam (NL)
     venue: 'Concertgebouw, main hall ( 11am! )'
     url: www.concertgebouw.nl
+  - title: Mike del Ferro / Jeroen van Veen/ Malgosia Fiebig
+    date: 2016-08-22T20:00:00.000Z
+    location: Utrecht
+    venue: Dom Tower
+    url: ''
