Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 gigs:
-  - title: Solo recital (private
+  - title: Solo recital (private)
     date: 2016-01-08T17:00:00.000Z
     location: Warsaw (Poland)
     venue: ''
