Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ gigs:
     url: www.henkhupkes.nl
   - title: 'Mike del Ferro "opera meets jazz"'
     date: 2016-02-06T20:00:00.000Z
-    location: De Rode Hoed
-    venue: Amsterdam
+    location: Amsterdam
+    venue: De rode hoed
     url: 'http://www.rodehoed.nl'
   - title: Mike del Ferro / Palle Danielson / Anders Kjellberg
     date: 2016-02-12T08:00:00.000Z
