Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ gigs:
     date: 2016-01-27T20:00:00.000Z
     location: Amsterdam (NL)
     venue: Splendor
-    url: www.splendoramsterdam.com
+    url: 'http://splendoramsterdam.com/mike-del-ferro-en-jeroen-van-veen-2/'
   - title: 'CD recordings with Metropole Orchestra, 2-4 february'
     date: 2016-02-03T10:00:00.000Z
     location: 'Hilversum, NL'
