Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ gigs:
     date: 2016-02-12T08:00:00.000Z
     location: 'Gothenburg, SE'
     venue: Jazz Club Nefertiti
-    url: ''
+    url: 'http://www.nefertiti.se/arrangemang/del-ferro-danielsson-kjellberg-2016/'
   - title: Mike del Ferro trio
     date: 2016-02-16T19:00:00.000Z
     location: Moscow
