Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -14,15 +14,20 @@ gigs:
     location: Brasilia (B)
     venue: Cine Brasilia
     url: 'https://www.facebook.com/CineBrasilia1960/'
+  - title: Mike del Ferro
+    date: 2016-03-10T20:00:00.000Z
+    location: Ceilândia (Brasil)
+    venue: SESC-Teatro Newton Rossi
+    url: ''
   - title: Mike del Ferro trio with Marcio Bahia and Andre Vasconcellos
     date: 2016-03-19T20:00:00.000Z
     location: Belo Horizonte - Brazil
     venue: Cafe con letras
     url: ''
-  - title: Mike del Ferro
-    date: 2016-03-10T20:00:00.000Z
-    location: Ceilândia (Brasil)
-    venue: SESC-Teatro Newton Rossi
+  - title: Mike del Ferro trio
+    date: 2016-03-28T20:00:00.000Z
+    location: Medellin Colombia
+    venue: tba
     url: ''
   - title: Mike del Ferro and Mike Boddé pianoduo plus video artist
     date: 2016-04-15T20:00:00.000Z
