Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,11 @@ gigs:
     location: Amsterdam (NL)
     venue: 'Concertgebouw, main hall ( 11am! )'
     url: www.concertgebouw.nl
+  - title: 'Mike del Ferro trio & Claron McFadden'
+    date: 2016-05-13T20:00:00.000Z
+    location: Austerlitz (Zeist)
+    venue: Beauforthuis
+    url: www.beauforthuis.nl
   - title: 'Mike del Ferro / Claron McFadden, stings and horns Metropole'
     date: 2016-06-09T20:00:00.000Z
     location: 'Terneuzen, Zeeland Jazzfestival'
