Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ gigs:
     location: Tilburg (NL)
     venue: Fontys Hogeschool
     url: ''
-  - title: Mike del Ferro / Palle Danielson / Anders Kjellberg
-    date: 2016-02-12T19:00:00.000Z
-    location: 'Gothenburg, SE'
-    venue: Jazz Club Nefertiti
-    url: 'http://www.nefertiti.se/arrangemang/del-ferro-danielsson-kjellberg-2016/'
+  - title: 'Big South Americ tour, more details soon'
+    date: 2016-03-07T19:00:00.000Z
+    location: ''
+    venue: ''
+    url: ''
   - title: 'Mike del Ferro and the Brasilia Symphony orchestra,'
     date: 2016-03-08T19:00:00.000Z
     location: Brasilia (B)
