Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ gigs:
     location: Tilburg (NL)
     venue: Fontys Hogeschool
     url: ''
-  - title: 'Big South Americ tour, more details soon'
+  - title: '4 week South America tour all march , more details soon'
     date: 2016-03-07T19:00:00.000Z
     location: ''
     venue: ''
