Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ gigs:
   - title: 'Mike del Ferro and the Brasilia Symphony orchestra,'
     date: 2016-03-08T19:00:00.000Z
     location: Brasilia (B)
-    venue: Cine Brasilia
-    url: 'https://www.facebook.com/CineBrasilia1960/'
+    venue: Teatro Pedro Calmon
+    url: ''
   - title: Mike del Ferro
     date: 2016-03-10T20:00:00.000Z
     location: Ceilândia (Brasil)
@@ -29,12 +29,12 @@ gigs:
     location: Medellin Colombia
     venue: tba
     url: ''
-  - title: Mike del Ferro and Mike Boddé pianoduo plus video artist
+  - title: Mike del Ferro and Mike Boddé pianoduo/video artist Mirthe Dokter
     date: 2016-04-15T20:00:00.000Z
     location: Amsterdam (NL)
     venue: De Kleine Komedie
     url: www.dekleinekomedie.nl
-  - title: Mike del Ferro and Mike Boddé pianoduo plus video artist
+  - title: Mike del Ferro and Mike Boddé pianoduo/video artist Mirthe Dokter
     date: 2016-04-16T20:00:00.000Z
     location: Amsterdam (NL)
     venue: De Kleine Komedie
