Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 gigs:
-  - title: 'Lecture: "selfmanagement and networking for musicians"'
-    date: 2016-02-18T19:15:00.000Z
-    location: Tilburg (NL)
-    venue: Fontys Hogeschool
+  - title: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
+    date: 2016-03-12T19:15:00.000Z
+    location: Rio de Janeiro
+    venue: Teatro de Câmara of Cidade das Artes
     url: ''
-  - title: '4 week South America tour all march , more details soon'
-    date: 2016-03-07T19:00:00.000Z
+  - title: '5 week South America tour, Brazil, Argentina, Colombia'
+    date: 2016-03-03T00:00:00.000Z
     location: ''
     venue: ''
     url: ''
@@ -69,8 +69,8 @@ gigs:
     location: Utrecht
     venue: Dom Tower
     url: ''
-  - title: Mike del Ferro /Marcio Bahia
-    date: 2016-03-20T20:00:00.000Z
-    location: Belo Horizonte-Brazil
-    venue: Cafe com letras
+  - title: Mike del Ferro  trio
+    date: 2016-03-23T21:00:00.000Z
+    location: 'Cordoba, Argentina'
+    venue: Cocina de Culturas
     url: ''
