Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 gigs:
-  - title: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
+  - title: Rio de Janeiro/Brazil
     date: 2016-03-12T19:15:00.000Z
-    location: Rio de Janeiro
+    location: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
     venue: Teatro de Câmara of Cidade das Artes
     url: ''
   - title: '5 week South America tour, Brazil, Argentina, Colombia'
