Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 gigs:
-  - title: Rio de Janeiro/Brazil
+  - title: Rio de Janeiro
     date: 2016-03-12T19:15:00.000Z
     location: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
     venue: Teatro de Câmara of Cidade das Artes
