--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 gigs:
   - title: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
     date: 2016-03-12T19:15:00.000Z
-    location: ''
-    venue: Rio de Janeiro
+    location: Teatro de Câmara of Cidade das Artes
+    venue: Rio de Janeiro/Brazil
     url: ''
   - title: '5 week South America tour, Brazil, Argentina, Colombia'
     date: 2016-03-03T00:00:00.000Z
