Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -4,73 +4,73 @@ gigs:
     location: Teatro de Câmara of Cidade das Artes
     venue: Rio de Janeiro/Brazil
     url: ''
-  - title: '5 week South America tour, Brazil, Argentina, Colombia'
+  - title: 'South America tour, Brazil, Argentina, Colombia'
     date: 2016-03-03T00:00:00.000Z
     location: ''
     venue: ''
     url: ''
   - title: 'Mike del Ferro and the Brasilia Symphony orchestra,'
     date: 2016-03-08T19:00:00.000Z
-    location: Brasilia (B)
-    venue: Teatro Pedro Calmon
+    location: Teatro Pedro Calmon
+    venue: Brasilia (Brazil)
     url: ''
   - title: Mike del Ferro
     date: 2016-03-10T20:00:00.000Z
-    location: Ceilândia (Brasil)
-    venue: SESC-Teatro Newton Rossi
+    location: SESC-Teatro Newton Rossi
+    venue: Ceilandia (Brazil)
     url: ''
   - title: Mike del Ferro trio with Marcio Bahia and Andre Vasconcellos
     date: 2016-03-19T20:00:00.000Z
-    location: Belo Horizonte - Brazil
-    venue: Cafe com letras
+    location: Cafe com letras
+    venue: Belo Horizonte (Brazil)
     url: ''
   - title: Mike del Ferro trio
     date: 2016-03-28T20:00:00.000Z
-    location: Medellin Colombia
-    venue: tba
+    location: tba
+    venue: Medellin (Colombia)
     url: ''
   - title: Mike del Ferro and Mike Boddé pianoduo/video artist Mirthe Dokter
     date: 2016-04-15T20:00:00.000Z
-    location: Amsterdam (NL)
-    venue: De Kleine Komedie
+    location: De Kleine Komedie
+    venue: Amsterdam (NL)
     url: www.dekleinekomedie.nl
   - title: Mike del Ferro and Mike Boddé pianoduo/video artist Mirthe Dokter
     date: 2016-04-16T20:00:00.000Z
-    location: Amsterdam (NL)
-    venue: De Kleine Komedie
+    location: De Kleine Komedie
+    venue: Amsterdam (NL)
     url: www.dekleinekomedie.nl
   - title: Kuwait Jazz festival
     date: 2016-04-28T20:00:00.000Z
     location: TBA
-    venue: Kuwait City
+    venue: Kuwait
     url: ''
   - title: Mike del Ferro with the Metropole orchestra
     date: 2016-05-08T11:00:00.000Z
-    location: Amsterdam (NL)
-    venue: 'Concertgebouw, main hall ( 11am! )'
+    location: 'Concertgebouw, main hall ( 11am! )'
+    venue: Amsterdam (NL)
     url: www.concertgebouw.nl
   - title: 'Mike del Ferro trio & Claron McFadden'
     date: 2016-05-13T20:00:00.000Z
-    location: Austerlitz (Zeist)
-    venue: Beauforthuis
+    location: Beauforthuis
+    venue: Austerlitz (Zeist/NL)
     url: www.beauforthuis.nl
   - title: 'Mike del Ferro / Claron McFadden, stings and horns Metropole'
     date: 2016-06-09T20:00:00.000Z
-    location: 'Terneuzen, Zeeland Jazzfestival'
-    venue: Scheldetheater
+    location: Scheldetheater
+    venue: Terneuzen (NL)
     url: ''
   - title: The music of Queen Mike del Ferro / Jeroen van Veen/ Malgosia Fiebig
     date: 2016-06-11T20:00:00.000Z
-    location: Brugge
-    venue: Tower
+    location: Cathedral
+    venue: Brugge (Belgium)
     url: ''
   - title: Mike del Ferro / Jeroen van Veen/ Malgosia Fiebig
     date: 2016-08-22T20:00:00.000Z
-    location: Utrecht
-    venue: Dom Tower
+    location: Dom Tower
+    venue: Utrecht (NL)
     url: ''
   - title: Mike del Ferro  trio
     date: 2016-03-23T21:00:00.000Z
-    location: 'Cordoba, Argentina'
-    venue: Cocina de Culturas
+    location: Cocina de Culturas
+    venue: Cordoba (Argentina)
     url: ''
