Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ gigs:
   - title: Mike del Ferro/Marcio Bahia/Andre Vasconcellos
     date: 2016-03-12T19:15:00.000Z
     location: Teatro de Câmara of Cidade das Artes
-    venue: Rio de Janeiro/Brazil
+    venue: Rio de Janeiro-Brazil
     url: ''
   - title: 'South America tour, Brazil, Argentina, Colombia'
     date: 2016-03-03T00:00:00.000Z
