--- a/_config.yml
+++ b/_config.yml
@@ -33,12 +33,12 @@ gigs:
     date: 2016-04-15T20:00:00.000Z
     location: De Kleine Komedie
     venue: Amsterdam (NL)
-    url: www.dekleinekomedie.nl
+    url: http://www.dekleinekomedie.nl
   - title: Mike del Ferro and Mike Boddé pianoduo/video artist Mirthe Dokter
     date: 2016-04-16T20:00:00.000Z
     location: De Kleine Komedie
     venue: Amsterdam (NL)
-    url: www.dekleinekomedie.nl
+    url: http://www.dekleinekomedie.nl
   - title: Kuwait Jazz festival
     date: 2016-04-28T20:00:00.000Z
     location: TBA
@@ -48,12 +48,12 @@ gigs:
     date: 2016-05-08T11:00:00.000Z
     location: 'Concertgebouw, main hall ( 11am! )'
     venue: Amsterdam (NL)
-    url: www.concertgebouw.nl
+    url: http://www.concertgebouw.nl
   - title: 'Mike del Ferro trio & Claron McFadden'
     date: 2016-05-13T20:00:00.000Z
     location: Beauforthuis
     venue: Austerlitz (Zeist/NL)
-    url: www.beauforthuis.nl
+    url: http://www.beauforthuis.nl
   - title: 'Mike del Ferro / Claron McFadden, stings and horns Metropole'
     date: 2016-06-09T20:00:00.000Z
     location: Scheldetheater
