Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ gigs:
     date: 2016-03-12T19:15:00.000Z
     location: Teatro de Câmara of Cidade das Artes
     venue: Rio de Janeiro-Brazil
-    url: ''
+    url: 
   - title: 'South America tour, Brazil, Argentina, Colombia'
     date: 2016-03-03T00:00:00.000Z
     location: ''
