Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -77,5 +77,5 @@ gigs:
   - title: Masterclass and Concert
     date: 2016-03-04T16:00:00.000Z
     location: TBA
-    venue: Goiana
+    venue: Goiana (Brazil)
     url: ''
