Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ gigs:
     location: ''
     venue: ''
     url: ''
-  - title: 'Mike del Ferro and the Brasilia Symphony orchestra,'
+  - title: 'with the Brasilia Symphony orchestra,'
     date: 2016-03-08T19:00:00.000Z
     location: Teatro Pedro Calmon
     venue: Brasilia (Brazil)
